fix for bug #341902:
Bookmarks-> "Subscribe to this page..." is not aligned properly with "Bookmark This Page..." and "Bookmark All Tabs..."

this fix also fixed bug #347548:

bookmark folder icon too far to the right

thanks to mark pilgrim (pilgrim@gmail.com) for the fix.

r=asaf, a=mconnor

--- a/mozilla/browser/themes/winstripe/browser/browser.css
+++ b/mozilla/browser/themes/winstripe/browser/browser.css
@@ -160,7 +160,8 @@ menuitem.bookmark-item {
 -moz-padding-start: 4px; 
 }
 
-#menu_BookmarksPopup menuitem.menuitem-iconic { 
+#menu_BookmarksPopup menuitem.menuitem-iconic,
+#menu_BookmarksPopup menu.menu-iconic { 
 -moz-padding-start: 0px; 
 }
 
